Updating index.html
Now its Hello world from Soomro

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     
-    <div>Hello World from Naveed</div>
+    <div>
+        Hello World from <s>Naveed</s>Soomro
+    </div>
     
 </body>
 </html>
