--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     
     <div>
-        Hello World from <s>Naveed</s>Soomro
+        Hello World from <s>Naveed Ahmed
     </div>
     
 </body>
